- Update "GET SERVERPREFS" command to check the status of parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin get serverprefs ParallelBackupEnabled")
- Update "SET SERVERPREFS" command to enable or disable parallel backup for Claris FileMaker Server 19.5.1. (Usage: "fmcsadmin set serverprefs ParallelBackupEnabled=false")
- Add an error message for the FileMaker error code 956.
- Change an error message when specifying the host name of Claris FileMaker Cloud with "--fqdn" option.
- Tested with Claris FileMaker Server 19.5.
- Tested on Windows 11 and macOS Monterey 12.
- Built with Go 1.18.
- [INFO] Drop support for Claris FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
- [INFO] Drop support for 32-bit Windows version.
- [INFO] Drop support for Windows 10 Version 1903, 1909, 2004 and 20H2.
- [INFO] Drop support for macOS Mojave 10.14.
- [INFO] Drop support for CentOS Linux 8.
- [BUG FIX] Improve DNS error handling when using "--fqdn" option.

Version: 1.3.0
Date: August 17, 2021
- Support Ubuntu 18.04 LTS.
- Support Apple Silicon on macOS.
- Add "REMOVE" command to move databases out of hosted folder for Claris FileMaker Server 19.3.1.
- Update "GET SERVERPREFS" command to get streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin get serverprefs AuthenticatedStream")
- Update "SET SERVERPREFS" command to set streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin set serverprefs AuthenticatedStream=1")
- Return the FileMaker error code 10502 when using "LIST" command and fmserverd is stopping.
- Improve error handling in case of detecting server-side error.
- Suppress outputting error messages for debugging.
- Add error messages for the FileMaker error code 1713, 20501.
- Built with Go 1.16.
- [BUG FIX] Detect upper case when using "SET SERVERCONFIG SecureFilesOnly", "SET SERVERPREFS RequireSecureDB" and "SET CWPCONFIG" command.

Version: 1.2.0
Date: February 17, 2021